[package]
name = "heroinn_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heroinn_util = {path = "../heroinn_util"}
simple_logger = "2.2.0"
log = "0.4"
uuid = { version = "1.1.2" , features = ["v4"]}
hostname = "^0.3"
systemstat = "0.1.11"
os_info = "3.4"
lazy_static = "1.4.0"