[package]
name = "heroinn_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heroinn_util = {path = "../heroinn_util"}
uuid = "1.1.2"
log = "0.4.17"
termport = {git = "https://github.com/b23r0/termport.git"}