[package]
name = "heroinn_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
log = "0.4"
uuid = "1.1.2"
rfd = "0.10.0"
sysinfo = "0.25.1"
chrono = "0.4.22"
path-absolutize = "3.0.13"