[package]
name = "heroinn_ftp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
egui_extras = {version = "0.19.0" , features = ["image"]}
image = { version = "0.24", features = ["jpeg", "png", "ico"] }
log = "0.4"
simple_logger = { version = "2.3.0" , features = ["threads"]}
rfd = "0.10.0"
heroinn_util = {path = "../../heroinn_util"}
lazy_static = "1.4.0"